[package]
name = "gc9106"
description = "GC9106 TFT LCD driver with embedded-graphics support"
version = "0.9.0"
authors = ["Paul Sajna <sajattack@gmail.com>", "Rémi Ait-Younes <remi@ait-younes.fr>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/galacs/gc9106"
readme = "README.md"
documentation = "https://docs.rs/gc9106"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
